--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>                    
                 <a href="#" class="brand-logo "><img id="navLogo" src="images/coil_prescroll2.png"></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a id="fancy-link" href="#">GitHub</a></li>
+                    <li><a id="fancy-link" href="https://github.com/coilcoin" target="_blank">GitHub</a></li>
                     <li><a id="fancy-link" href="#">About</a></li>
                     <li><a id="fancy-link" href="#">Buy COL</a></li>
                 </ul>
@@ -31,7 +31,7 @@
                     <li><a id="mobileText" href="#"><i class="large material-icons white-text">keyboard_backspace</i></a></li>
                     <li><a id="mobileText" href="#">GitHub</a></li>
                     <li><a id="mobileText" href="#">About</a></li>
-                    <li><a id="mobileText" href="#">Buy COL</a></li>
+                    <li><a id="mobileText" href="https://github.com/coilcoin" target="_blank">Buy COL</a></li>
                 </ul>
             </div>
         </nav>
@@ -45,7 +45,7 @@
     
 
 
-    <div id="content" class="row container">
+    <div class="row container content">
         <h2 class="white-text header center">Coil Coin</h2>
         <p class="center grey-text text-darken-1">Coil uses peer-to-peer technology to operate with no central authority or banks. <br> The management of transactions and the distribution of Coil coin is carried out by the network</p>
         <br>
