--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link type="text/css" rel="stylesheet" href="css/styles.css"  media="screen,projection"/>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!--Fav Icon stuff-->
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   </head>
   <body>
     <!--Import jQuery before materialize.js-->
@@ -29,9 +33,9 @@
                 
                 <ul class="side-nav" id="mobile-demo">
                     <li><a id="mobileText" href="#"><i class="large material-icons white-text">keyboard_backspace</i></a></li>
-                    <li><a id="mobileText" href="#">GitHub</a></li>
+                    <li><a id="mobileText" href="https://github.com/coilcoin" target="_blank">GitHub</a></li>
                     <li><a id="mobileText" href="#">About</a></li>
-                    <li><a id="mobileText" href="https://github.com/coilcoin" target="_blank">Buy COL</a></li>
+                    <li><a id="mobileText" href="#">Buy COL</a></li>
                 </ul>
             </div>
         </nav>
@@ -45,9 +49,13 @@
     
 
 
-    <div class="row container content">
+    <div id="content" class="row container">
         <h2 class="white-text header center">Coil Coin</h2>
-        <p class="center grey-text text-darken-1">Coil uses peer-to-peer technology to operate with no central authority or banks. <br> The management of transactions and the distribution of Coil coin is carried out by the network</p>
+        <div class="row">
+            <div class="col s12 m6 offset-m3">
+                <p class="center grey-text text-darken-1">Coil uses peer-to-peer technology to operate with no central authority or banks. The management of transactions and the distribution of Coil coin is carried out by the network</p>  
+            </div>
+        </div>
         <br>
         <div class="row white-text">
             <div class="col s12 m4">
