Fixed mobile links.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
     <script>
         $(document).ready(function(){
             $('.parallax').parallax();
-            $(".button-collapse").sideNav();
+            $(".button-collapse").sideNav({
+                closeOnClick: true
+            });
         });
 
         $(window).scroll(function() {
