Added more info

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </div>
     
-    <div id="content" class="row container">
+    <div class="row container content">
         <h2 class="white-text header center">Coil Coin</h2>
         <div class="row">
             <div class="col s12 m6 offset-m3">
@@ -81,6 +81,18 @@
             </div>
         </div>
         <div class="divider"></div>
+    </div>
+    
+    <div class="row container white-text content"> 
+        <div class="row">
+            <div class="col s12 m6 offset-m3">
+                <div class="center promo promo-example">
+                    <i class="material-icons">code</i>
+                    <p class="promo-caption">Under Developemnt</p>
+                    <p class="center grey-text text-darken-1">We're currently hard at work developing this website, miners, wallets, and Coil itself. If you would like to contibute please head over to our GitHub page!</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <br />
