--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="center promo promo-example">
                     <i class="material-icons">code</i>
                     <p class="promo-caption">Under Developemnt</p>
-                    <p class="center grey-text text-darken-1">We're currently hard at work developing this website, miners, wallets, and Coil itself. If you would like to contibute please head over to our GitHub page!</p>
+                    <p class="center grey-text text-darken-1">We're currently hard at work developing this website, miners, wallets, and Coil itself. If you would like to contribute please head over to our GitHub page!</p>
                 </div>
             </div>
         </div>
